# news-scraper

./: .envexample  .gitignore  Dockerfile  all_daily_results.csv  all_global_results.csv  config.py  docker-compose-deploy-yml  docker-compose-deploy.yml  docker-compose.yml  global.py  local.py  manage.py  new_daily_results.csv  new_global_results.csv  pyclean.sh  pyproject.toml  requirements.txt  run-prod.sh  run.sh  run_worker.py  worker.sh  wsgi.py
app/: __init__.py  alembic.ini  helpers.py  session.py  settings.py  validators.py
app/alembic/: env.py
app/controllers/: __init__.py  ping.py  scrape_controller.py  search_controller.py  search_locations_controller.py  search_terms_controller.py  user_controller.py  v1.py
app/dependencies/: auth.py  db.py
app/models/: __init__.py  helpers.py  schema.py
app/repositories/: base.py  result_repository.py  search_location_repository.py  search_repository.py  search_terms_repository.py  user_repository.py
app/services/: scraper_service.py  search_service.py  token_service.py  user_service.py
application/: __init__.py  helpers.py
application/alembic/: env.py
application/decorators/: validation.py
application/managers/: bcrypt.py
application/models/: __init__.py  helpers.py  schema.py
application/services/: download_service.py  scraper_service.py  search_service.py  user_service.py  validate_service.py
application/worker/: __init__.py  tasks.py
nginx/: Dockerfile
nginx/conf/: default.conf
tests/: conftest.py  fixtures.py
tests/controllers/: test_ping.py  (+4 more)
ui/: default.conf  package.json
(+63 files in other folders)
