[tool.poetry]
name = "daily-ops"
version = "0.1.0"
description = ""
authors = ["Alistair Stark <astark@spiria.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
Flask-JWT-Extended = "^4.3.1"
Flask-SQLAlchemy = "^2.5.1"
alembic = "^1.7.5"
gunicorn = "^20.1.0"
gevent = "^21.12.0"
marshmallow = "^3.14.1"
requests = "^2.27.1"
Flask-Bcrypt = "^0.7.1"
psycopg2 = "^2.9.3"
pytz = "^2021.3"
lxml = "^4.7.1"
Flask = {extras = ["async"], version = "^2.0.2"}
httpx = "^0.21.3"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
